# python-template-with-poetry

./: .flake8  .pre-commit-config.yaml  .yamllint  README.md  pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  lint.yml  test.yml
src/: hello_world.py
tests/: test_hello_world.py
