[tool.poetry]
name = "aws-ec2-system-reboot-utilities"
version = "0.1.0"
description = ""
authors = ["lycheejam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.122"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
